fix alignment when there is more than one icon next to group in left menu

--- a/src/app/core/components/left-nav-tree/left-nav-tree.component.scss
+++ b/src/app/core/components/left-nav-tree/left-nav-tree.component.scss
@@ -306,6 +306,10 @@ $bk-secondary: #3B73B4;
 
         .node-state {
           margin-left: auto;
+
+          i {
+            margin-left: 0.5rem;
+          }
         }
 
         .node-label-title {
